# plantMonitor

./: .gitignore  CMakeLists.txt  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf
client/: client.py
src/: main.c
src/analog/: analog.c  analog.h
src/analog/analog_ranges/: analog_ranges.c  analog_ranges.h
src/ble/: advertising.h  ble.c  ble.h  uuid.h
src/ble/service/: service.c  service.h
src/external_sensors/: external_sensors.c  external_sensors.h
src/external_sensors/ambient_light/: ambient_light.c  ambient_light.h
src/external_sensors/temp_humid/: temp_humid.c  temp_humid.h
